MOD add basic button, remove webplayer components

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,8 +14,9 @@ $width-xl: 768px;
 
 // colors
 $accent-color: #000;
-$background-color: #fff;
+$background-color: #469cd1;
 $overlay-color: #32424C;
+$text-color: #fff;
 
 // Sizes
 $tabs-header-height: 35px;
